# LampOne

./: README.md  lampone.py
Cube/: LampOne.ioc
FW/: .cproject  .project  CMakeLists.txt  README.md  main.cpp  table.c  test_flash.c  txt.txt
FW/config/: FreeRTOSConfig.h  parametres.txt
FW/dev/: CMakeLists.txt
FW/drivers/: CMakeLists.txt
FW/drivers/include/: board.h  flash.h  gpio.h  pwm.h  uart.h
FW/drivers/src/: adc.c  drivers.c  flash.c  gpio.c  pwm.c  uart.c
FW/lib/PID-CPP/: CMakeLists.txt  README.md  keywords.txt  library.properties
FW/lib/freemodbus/: CMakeLists.txt
FW/lib/freemodbus/modbus/: mb.c
FW/lib/freemodbus/modbus/functions/: mbfuncfile.c
FW/lib/freemodbus/modbus/rtu/: mbrtu.c
FW/portfreemodbus/: CMakeLists.txt
FW/portfreemodbus/include/: port.h
FW/portfreemodbus/src/: portevent.c  portserial.c
FW/prmsystem/include/: prmSystemCallback.h
FW/scripts/: LampOne.launch  flash.sh  gdb-client.sh  openocd.cfg
FW/systems/: CMakeLists.txt  STM32G030F6Px_FLASH.ld
FW/systems/include/: sysTimeMeas.h
FW/task/: CMakeLists.txt
FW/task/include/: adcTSK.h  modbusTSK.h  systemTSK.h
FW/task/src/: adcTSK.cpp  modbusTSK.cpp  monitorTSK.c  systemTSK.cpp
Model/: Diffuse holder.SLDPRT  Diffuse holder.STL  Flat-pattern-bracket.DXF  bracket.SLDPRT  bracket.STEP
PCB/: LampOne.OutJob  LampOne.PCBDwf  LampOne.PcbDoc  LampOne.PrjPcb  LampOne.PrjPcbStructure  LampOne.SchDoc  LampOne.step  logo.cdr
PCB/Project Outputs for LampOne/: Design Rule Check - LampOne.drc  Design Rule Check - LampOne.html  LampOne.DXF  Status Report.Txt
(+21 files in other folders)
